--- a/cloud.api/cloud.api.csproj
+++ b/cloud.api/cloud.api.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
